# Tribase

./: .clang-format  .gitignore  CMakeLists copy.txt  CMakeLists.txt  Dockerfile  README.md  REPRODUCE.md  Readme.md  test  test.cpp
benchmarks/HandOutlines/origin/: HandOutlines_query.fvecs
figures/: build_ratio.sh  build_ratio2.sh  draw.sh  edge.sh  fig10.py  fig11.py  fig12a.py  fig12b.py  fig12b2.py  fig13.py  fig7.py  fig8.py  fig9.py  fix_standard.sh  hnsw.sh  one_click.sh  pruning_ratio.sh  release.sh  run.sh  standard.sh  test.sh  utils.py
hnswlib/hnswlib/: hnswalg.h  hnswlib.h
script/: big-data.sh  build.sh  dev.sh  hnswlib.sh  iris.sh  pack_benchmarks.py  plot.py  pretrain_query_run.sh  r2.sh  recall-qps-debug.sh  recall-qps.sh  run.sh  similarity_with_distance.py  subk.sh  tab3.sh  test.py  tmp.sh  tri_plot.ipynb
src/: CMakeLists.txt  Clustering.cpp  Clustering.h  IVF.cpp  IVF.h  IVFScan.hpp  Index.cpp  Index.h  Pre-computing.h  avx512.h  common.h  heap.hpp  main.cpp  platform_macros.h  query.cpp  stats.h  tribase.h  uniform_dataset_generate.cpp  utils.cpp  utils.h  utlis.h
src/compress/: CMakeLists.txt  check.cpp  check.h  repair_compress.cpp  repair_compress.h  utils.h
src/tests/: CMakeLists.txt  cluster_test  cluster_test.cpp  compress_test.cpp  csv_test.cpp  dim_test.cpp  faiss_test.cpp  faisscluster.py  heap_test.cpp  hnswlib_test.cpp  index_test.cpp  iris.fvecs  read_fves  read_fves.cpp  scan_test.cpp  scikit-learn.py  test.cpp  time_test.cpp
src/tests/clustering/: main.py
trifaiss/: .gitignore  CMakeLists.txt  requirements.txt  run.py
trifaiss/faiss/: CMakeLists.txt  Clustering.h  IndexFlat.cpp  IndexFlat.h  IndexFlatwithDistance.cpp  IndexFlatwithDistance.h  IndexIVF.h  IndexIVFFlat.cpp  IndexIVFwithDistance.cpp  IndexIVFwithDistance.h
trifaiss/faiss/impl/: index_write.cpp
trifaiss/faiss/python/: swigfaiss.swig
trifaiss/faiss/scripts/: make.sh
trifaiss/faiss/utils/: quick_rsqrt.hpp
trifaiss/tutorial/python/: tmp.txt
